--- a/src/Second Page/SecondPage.css
+++ b/src/Second Page/SecondPage.css
@@ -15,9 +15,10 @@ h4 {
   text-align: center;
 }
 
-.container2 {
+.container-page2 {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
+  width: auto;
 }
