--- a/src/Second Page/SecondPage.css
+++ b/src/Second Page/SecondPage.css
@@ -1,24 +1,23 @@
 h4 {
   text-align: center;
   color: white;
-  font-size: 50px;
+  font-size: 40px;
+  margin-bottom: 0%;
+}
+
+h5 {
+  text-align: center;
+  color: white;
+  font-size: 40px;
   margin-bottom: 0%;
 }
 
 .secondpicture {
-  width: 500px;
-  height: 500px;
+  width: 550px;
+  height: 550px;
   object-fit: contain;
 }
 
 .secondpagetext {
   text-align: center;
-}
-
-.container-page2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  width: auto;
 }
