--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/*
 .App {
   display: flex;
   justify-content: center;
@@ -6,3 +7,4 @@
   flex-direction: column;
   background-repeat: no-repeat;
 }
+*/
