--- a/src/Second Page/SecondPage.css
+++ b/src/Second Page/SecondPage.css
@@ -1,10 +1,10 @@
 h4 {
   text-align: center;
-  color: white;
-  font-size: 40px;
+  font-size: 60px;
   margin-bottom: 0%;
   color: #f4b510;
-  margin: 60px 0 20px 0;
+  margin: 0 0 20px 0;
+  padding-top: 30px;
 }
 
 h5 {
@@ -69,10 +69,10 @@ h5 {
     object-fit: contain;
   }
   h5 {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
   h4 {
-    margin: 40px 0 0 0;
+    padding: 40px 0 0 0;
   }
 }
 
@@ -88,7 +88,7 @@ h5 {
     margin-bottom: 40px;
   }
   h4 {
-    margin: 40px 0 0 0;
+    padding: 40px 0 0 0;
   }
 }
 
@@ -102,7 +102,7 @@ h5 {
     margin: 40px 0 0 0;
   }
   h5 {
-    font-size: 20px;
+    font-size: 16px;
     letter-spacing: 3px;
     margin-bottom: 20px 0;
   }
