--- a/src/Second Page/SecondPage.css
+++ b/src/Second Page/SecondPage.css
@@ -3,7 +3,6 @@ h4 {
   font-size: 60px;
   margin-bottom: 0%;
   color: #f4b510;
-  margin: 0 0 20px 0;
   padding-top: 30px;
 }
 
@@ -85,7 +84,7 @@ h5 {
   h5 {
     font-size: 22px;
     letter-spacing: 3px;
-    margin-bottom: 40px;
+    margin-bottom: 40px 0 0 0;
   }
   h4 {
     padding: 40px 0 0 0;
@@ -99,7 +98,8 @@ h5 {
     object-fit: contain;
   }
   h4 {
-    margin: 40px 0 0 0;
+    margin: 0;
+    font-size: 40px;
   }
   h5 {
     font-size: 16px;
