Super-finalizat pagina 3

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-/*
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  background-repeat: no-repeat;
+body > element.style {
+  padding-right: 0px;
+  overflow: hidden;
 }
-*/
