--- a/src/Second Page/SecondPage.css
+++ b/src/Second Page/SecondPage.css
@@ -1,3 +1,7 @@
+.page-height {
+  height: 100vh;
+}
+
 h4 {
   text-align: center;
   font-size: 60px;
@@ -28,7 +32,7 @@ h5 {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 70vh;
+  height: 80vh;
 }
 
 @media screen and (max-width: 1700px) {
