--- a/src/ThirdPage/ThirdPage.css
+++ b/src/ThirdPage/ThirdPage.css
@@ -1,3 +1,7 @@
+.page-height {
+  height: 100vh;
+}
+
 h4 {
   text-align: center;
   font-size: 60px;
@@ -8,47 +12,215 @@ h4 {
 
 .third-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .image2 {
-  width: 300px;
-  height: 250px;
-  object-fit: contain;
-  padding-bottom: 10px;
-}
-
-.ThirdPageImage {
-  width: 300px;
-  height: 250px;
+  width: 420px;
+  height: 470px;
   object-fit: contain;
 }
 
 .image4 {
-  width: 300px;
-  height: 250px;
+  width: 400x;
+  height: 450px;
   object-fit: contain;
+  padding-right: 30px;
 }
 
-@media screen and (max-width: 1400px) {
+.image3 {
+  object-fit: contain;
+  padding-top: 15px;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 2500px) {
+  .image2 {
+    width: 350px;
+    height: 400px;
+    object-fit: contain;
+    padding-bottom: 20px;
+  }
+
+  .image1 {
+    width: 350px;
+    height: 400px;
+    object-fit: contain;
+    padding-bottom: 10px;
+  }
+
+  .image3 {
+    width: 430px;
+    height: 430px;
+    object-fit: contain;
+    padding-top: 10px;
+  }
+
+  .image4 {
+    width: 310x;
+    height: 360px;
+    object-fit: contain;
+    padding-right: 30px;
+    padding-bottom: 40px;
+  }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1600px) {
+  .image2 {
+    width: 250px;
+    height: 300px;
+    object-fit: contain;
+    padding-bottom: 70px;
+  }
+
+  .image1 {
+    width: 250px;
+    height: 400px;
+    object-fit: contain;
+    padding-top: 20px;
+  }
+
+  .image3 {
+    width: 330px;
+    height: 400px;
+    object-fit: contain;
+    padding-bottom: 5px;
+  }
+
+  .image4 {
+    width: 270px;
+    height: 320px;
+    object-fit: contain;
+    padding-top: 20px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
   .third-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+  }
+  h4 {
+    text-align: center;
+    font-size: 60px;
+    color: #f4b510;
+    padding-top: 100px;
+  }
+  .image2 {
+    width: 250px;
+    height: 300px;
+    object-fit: contain;
+  }
+
+  .image1 {
+    width: 250px;
+    height: 300px;
+    object-fit: contain;
+    padding-bottom: 60px;
+  }
+
+  .image3 {
+    width: 320px;
+    height: 370px;
+    object-fit: contain;
+  }
+
+  .image4 {
+    width: 270px;
+    height: 270px;
+    object-fit: contain;
+    margin-bottom: 15px;
+
+    padding-right: 90px;
+  }
+  .first2 {
+    display: flex;
+    justify-content: center;
     align-items: center;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
+  .image2 {
+    width: 200px;
+    height: 250px;
+    object-fit: contain;
+  }
+
+  .image1 {
+    width: 200px;
+    height: 250px;
+    object-fit: contain;
+    padding-bottom: 60px;
+  }
+
+  .image3 {
+    width: 250px;
+    height: 300px;
+    object-fit: contain;
+  }
+
+  .image4 {
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    margin-bottom: 15px;
+  }
+  .first2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 570px) {
+  .third-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .first2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .second2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .image2 {
+    width: 200px;
+    height: 250px;
+    object-fit: contain;
+  }
+
+  .image1 {
+    width: 200px;
+    height: 250px;
+    object-fit: contain;
+    padding-right: 70px;
+  }
+
+  .image3 {
+    width: 250px;
+    height: 300px;
+    object-fit: contain;
+    padding-right: 110px;
+  }
+
+  .image4 {
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    padding-left: 20px;
+  }
+  h4 {
+    font-size: 40px;
+    padding-top: 50px;
+  }
 }
