--- a/src/ThirdPage/ThirdPage.css
+++ b/src/ThirdPage/ThirdPage.css
@@ -197,6 +197,7 @@ h4 {
     width: 200px;
     height: 250px;
     object-fit: contain;
+    padding-bottom: 0;
   }
 
   .image1 {
@@ -204,6 +205,7 @@ h4 {
     height: 250px;
     object-fit: contain;
     padding-right: 70px;
+    padding-bottom: 0;
   }
 
   .image3 {
@@ -211,6 +213,7 @@ h4 {
     height: 300px;
     object-fit: contain;
     padding-right: 110px;
+    padding-bottom: 0;
   }
 
   .image4 {
@@ -218,6 +221,7 @@ h4 {
     height: 200px;
     object-fit: contain;
     padding-left: 20px;
+    padding-bottom: 0;
   }
   h4 {
     font-size: 40px;
