--- a/src/ThirdPage/ThirdPage.css
+++ b/src/ThirdPage/ThirdPage.css
@@ -222,8 +222,11 @@ h4 {
     object-fit: contain;
     padding-left: 20px;
     padding-bottom: 0;
+    padding-top: 0;
   }
   h4 {
-    font-size: 40px;
+    font-size: 30px;
+    margin-bottom: 20px;
+    padding-top: 30px;
   }
 }
