--- a/src/second-page/SecondPage.css
+++ b/src/second-page/SecondPage.css
@@ -9,12 +9,14 @@ h4 {
   padding: 30px 0;
   margin: 0;
   padding-bottom: 0;
+  letter-spacing: 3px;
 }
 
 h5 {
   text-align: center;
   color: white;
   font-size: 60px;
+  letter-spacing: 3px;
 }
 
 .secondpicture {
@@ -121,5 +123,8 @@ h5 {
     font-size: 16px;
     letter-spacing: 3px;
     margin-bottom: 20px 0;
+  }
+  .second-container {
+    height: 75vh;
   }
 }
