--- a/src/second-page/SecondPage.css
+++ b/src/second-page/SecondPage.css
@@ -34,6 +34,7 @@ h5 {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  height: 70vh;
 }
 
 @media screen and (max-width: 1700px) {
