--- a/src/third-page/ThirdPage.css
+++ b/src/third-page/ThirdPage.css
@@ -14,6 +14,7 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 70vh;
 }
 
 .image2 {
@@ -195,24 +196,24 @@ h4 {
   }
   .image2 {
     width: 200px;
-    height: 250px;
+    height: auto;
     object-fit: contain;
     padding-bottom: 0;
   }
 
   .image1 {
     width: 200px;
-    height: 250px;
+    height: auto;
     object-fit: contain;
     padding-right: 70px;
     padding-bottom: 0;
   }
 
   .image3 {
-    width: 250px;
-    height: 300px;
+    width: 180px;
+    height: auto;
     object-fit: contain;
-    padding-right: 110px;
+    padding-right: 100px;
     padding-bottom: 0;
   }
 
@@ -222,12 +223,11 @@ h4 {
     object-fit: contain;
     padding-left: 20px;
     padding-bottom: 0;
-    padding-top: 0;
+    padding: 30px 0 0 0;
   }
   h4 {
     font-size: 30px;
-    margin-bottom: 20px;
-    padding-top: 50px;
+    padding-top: 30px 0;
     padding-left: 10px;
   }
 }
