--- a/src/third-page/ThirdPage.css
+++ b/src/third-page/ThirdPage.css
@@ -105,39 +105,43 @@ h4 {
   }
   h4 {
     text-align: center;
-    font-size: 60px;
+    font-size: 50px;
     color: #f4b510;
-    padding-top: 10px;
-    padding-left: 35px;
+    padding: 15px 0 20px 35px;
   }
   .image2 {
-    width: 250px;
-    height: 300px;
+    width: 180px;
+    height: 230px;
     object-fit: contain;
+    padding: 0;
   }
 
   .image1 {
-    width: 250px;
-    height: 300px;
+    width: 180px;
+    height: 230px;
     object-fit: contain;
-    padding-bottom: 60px;
+    padding: 20px 0 0 0;
   }
 
   .image3 {
-    width: 320px;
-    height: 370px;
+    width: 230px;
+    height: 260px;
     object-fit: contain;
+    padding-bottom: 15px;
   }
 
   .image4 {
-    width: 270px;
-    height: 270px;
+    width: 200px;
+    height: 200px;
     object-fit: contain;
-    margin-bottom: 15px;
-
-    padding-right: 90px;
+    margin-right: 30px;
   }
   .first2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .second2 {
     display: flex;
     justify-content: center;
     align-items: center;
