--- a/src/third-page/ThirdPage.css
+++ b/src/third-page/ThirdPage.css
@@ -186,7 +186,6 @@ h4 {
   .third-container {
     display: flex;
     flex-direction: column;
-    height: 85vh;
   }
   .first2 {
     display: flex;
@@ -201,37 +200,34 @@ h4 {
     align-items: center;
   }
   .image2 {
-    width: 200px;
-    height: 200px;
+    width: 140px;
+    height: 140px;
     object-fit: contain;
-    padding-bottom: 0;
-    padding-right: 15px;
+    margin-top: 10px;
   }
 
   .image1 {
-    width: 200px;
-    height: auto;
+    width: 130px;
+    height: 130px;
     object-fit: contain;
-    padding-right: 70px;
-    padding-bottom: 0;
+    padding: 0 40px 0 0;
   }
 
   .image3 {
-    width: 2200px;
-    height: 200px;
+    width: 140px;
+    height: 140px;
     object-fit: contain;
-    padding-right: 100px;
-    padding-bottom: 0;
+    padding: 0 60px 0 0;
   }
 
   .image4 {
-    width: 200px;
-    height: 200px;
+    width: 130px;
+    height: 130px;
     object-fit: contain;
-    padding-left: 20px;
-    padding: 30px 0 0 0;
-    margin-right: 80px;
+    padding: 0 45px 0 0;
+    margin: 0;
   }
+
   h4 {
     font-size: 30px;
     padding: 20px 0;
