--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -7,13 +7,13 @@
   font-size: 17px;
 }
 
-.css-6hp17o-MuiList-root-MuiMenu-list {
+.css-r8u8y9 {
   color: #f4b510;
   background-color: rgb(12, 11, 11);
   font-size: 10px;
 }
 
-.MuiBox-root > .css-zn48ox-MuiTypography-root {
+.css-1oy63y8 {
   color: #f4b510;
 }
 
