--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -17,7 +17,7 @@
   color: #f4b510;
 }
 
-.MuiPaper-root > .css-oqchhx-MuiContainer-root {
+.css-1k0jequ {
   position: fixed;
   top: 0;
   z-index: 1000;
