am terminat pagina 5

--- a/src/fourth-page/FourtPage.css
+++ b/src/fourth-page/FourtPage.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 70vh;
+  height: 65%;
 }
 
 .first2-fourtpage {
