--- a/src/fifth-page/FifthPage.css
+++ b/src/fifth-page/FifthPage.css
@@ -4,187 +4,192 @@
 
 .fifth-container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
-  height: 80vh;
+  justify-content: space-around;
+  margin-top: 20px;
+  height: 70%;
 }
 
-.first2-fifthpage {
+.first2-fifth {
+  display: flex;
+}
+
+.second2-fifth {
+  display: flex;
+}
+
+.test {
   display: flex;
   flex-direction: column;
-}
-
-.second2-fifthpage {
-  display: flex;
-  flex-direction: column;
-}
-
-h8 {
   text-align: center;
-  font-size: 70px;
+  margin: 0 70px;
+}
+
+.search {
+  width: 360px;
+  object-fit: contain;
+}
+
+.figma {
+  width: 360px;
+  object-fit: contain;
+}
+
+.laptop {
+  width: 360px;
+  object-fit: contain;
+}
+
+.release {
+  width: 360px;
+  object-fit: contain;
+}
+
+.header-fifth {
+  text-align: center;
+  font-size: 50px;
   color: #f4b510;
   padding: 50px 0;
   margin: 0;
   letter-spacing: 3px;
+  padding: 20px 0 0 0;
+  font-weight: 700;
 }
 
 h9 {
-  text-align: center;
   color: white;
-  font-size: 60px;
+  font-size: 30px;
   font-weight: 700;
-  margin-bottom: 30px;
+  text-align: center;
   letter-spacing: 3px;
-}
-
-.oldnew-image {
-  width: auto;
-  height: 740px;
-  object-fit: contain;
-}
-
-.desktop-image {
-  width: auto;
-  height: 740px;
-  object-fit: contain;
-}
-
-@media screen and (max-width: 1900px) {
-  .oldnew-image {
-    width: auto;
-    height: 640px;
-    object-fit: contain;
-  }
-
-  .desktop-image {
-    width: auto;
-    height: 640px;
-    object-fit: contain;
-  }
-
-  h7 {
-    font-size: 50px;
-  }
-}
-
-@media screen and (max-width: 1600px) {
-  .oldnew-image {
-    width: auto;
-    height: 540px;
-    object-fit: contain;
-  }
-
-  .desktop-image {
-    width: auto;
-    height: 540px;
-    object-fit: contain;
-  }
-
-  h7 {
-    font-size: 45px;
-  }
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 1300px) {
-  .oldnew-image {
-    width: auto;
-    height: 455px;
-    object-fit: contain;
-    margin-bottom: 15px;
-  }
-
-  .desktop-image {
-    width: auto;
-    height: 440px;
+  .search {
+    width: 290px;
     object-fit: contain;
   }
 
-  h7 {
-    font-size: 40px;
+  .figma {
+    width: 290px;
+    object-fit: contain;
   }
-  .desktop-image {
-    margin-bottom: 20px;
+
+  .laptop {
+    width: 290px;
+    object-fit: contain;
   }
-  .fourt-container {
-    height: 75vh;
+
+  .release {
+    width: 290px;
+    object-fit: contain;
   }
 }
 
-@media screen and (max-width: 1150px) {
-  .oldnew-image {
-    width: auto;
-    height: 375px;
-    object-fit: contain;
-    margin-bottom: 15px;
-  }
-
-  .desktop-image {
-    width: auto;
-    height: 360px;
+@media screen and (max-width: 1000px) {
+  .search {
+    width: 280px;
     object-fit: contain;
   }
 
-  h7 {
-    font-size: 35px;
+  .figma {
+    width: 280px;
+    object-fit: contain;
   }
-  .desktop-image {
-    margin-bottom: 20px;
+
+  .laptop {
+    width: 280px;
+    object-fit: contain;
   }
-  .fourt-container {
-    height: 75vh;
+
+  .release {
+    width: 280px;
+    object-fit: contain;
   }
 }
 
 @media screen and (max-width: 900px) {
-  .fourt-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 75vh;
-  }
-  .oldnew-image {
-    width: auto;
-    height: 380px;
+  .search {
+    width: 250px;
     object-fit: contain;
   }
 
-  .desktop-image {
-    width: auto;
-    height: 340px;
+  .figma {
+    width: 250px;
     object-fit: contain;
   }
 
-  h7 {
-    font-size: 30px;
+  .laptop {
+    width: 250px;
+    object-fit: contain;
   }
 
-  h6 {
+  .release {
+    width: 250px;
+    object-fit: contain;
+  }
+  h9 {
+    color: white;
+    font-size: 25px;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: 3px;
+    margin-bottom: 10px;
+  }
+  .header-fifth {
     font-size: 40px;
-    margin-bottom: 30px;
+  }
+  .test {
+    margin: 0 35px;
   }
 }
 
-@media screen and (max-width: 450px) {
-  .oldnew-image {
-    width: auto;
-    height: 340px;
+@media screen and (max-width: 700px) {
+  .search {
+    width: 170px;
     object-fit: contain;
   }
 
-  .desktop-image {
-    width: auto;
-    height: 300px;
+  .figma {
+    width: 170px;
     object-fit: contain;
   }
 
-  h7 {
-    font-size: 20px;
+  .laptop {
+    width: 170px;
+    object-fit: contain;
   }
 
-  h6 {
-    font-size: 30px;
-    margin-bottom: 30px;
+  .release {
+    width: 170px;
+    object-fit: contain;
+  }
+  h9 {
+    color: white;
+    font-size: 15px;
+  }
+  .header-fifth {
+    font-size: 40px;
+  }
+  .first2-fifth {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .second2-fifth {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-fifth {
+    font-size: 25px;
+  }
+  .fifth-container {
+    height: 82%;
   }
 }
