--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -1,12 +1,33 @@
-.prob {
-  background-color: #f4b510;
-  width: 88%;
-  height: 150px;
+.footer-position {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.cif {
+.footer {
+  background-color: rgb(12, 11, 11);
+  max-height: auto;
+  width: 80%;
+  margin-top: 60px;
+  color: #ffffff;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
+  border-radius: 20px;
+}
+
+.footer-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.logo {
   margin-top: 30px;
+}
+
+.all4 {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 20px 0;
 }
