--- a/src/eighth-page/EighthPage.css
+++ b/src/eighth-page/EighthPage.css
@@ -7,18 +7,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 20px;
+  height: 62vh;
 }
 
 .header-eighth {
   text-align: center;
   font-size: 50px;
   color: #f4b510;
-  padding: 50px 0;
   margin: 0;
   letter-spacing: 3px;
-  padding: 30px 0;
+  padding: 30px 0 0 0;
   font-weight: 700;
+  height: 10vh;
 }
 
 .passion {
