--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -2,18 +2,18 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  height: 20vh;
 }
 
 .footer {
   background-color: rgb(12, 11, 11);
   max-height: auto;
-  width: 80%;
-  margin-top: 60px;
+  width: 88%;
   color: #ffffff;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   border-radius: 20px;
 }
 
@@ -30,4 +30,7 @@
   display: flex;
   justify-content: space-evenly;
   margin: 20px 0;
+}
+
+.poza {
 }
