--- a/src/footer/footer.css
+++ b/src/footer/footer.css
@@ -7,7 +7,6 @@
 
 .footer {
   background-color: rgb(12, 11, 11);
-  max-height: auto;
   width: 88%;
   color: #ffffff;
   display: flex;
@@ -23,14 +22,26 @@
 }
 
 .logo {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
-.all4 {
+.footer-first-column {
   display: flex;
   justify-content: space-evenly;
   margin: 20px 0;
 }
 
-.poza {
+.footer-second-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+.footer-second-column > p {
+  font-size: 15px;
+  font-weight: 700;
+  text-align: center;
+  height: 80%;
+  margin: 10px 0;
 }
