--- a/src/portofolio-page-one/PortofolioPageOne.css
+++ b/src/portofolio-page-one/PortofolioPageOne.css
@@ -29,28 +29,30 @@
 }
 
 .product {
-  width: 460px;
+  width: 600px;
   object-fit: contain;
+  border-radius: 5px;
 }
 
 .todo {
-  width: 460px;
+  width: 600px;
   object-fit: contain;
   border-radius: 5px;
 }
 
 .header-sixth {
   text-align: center;
-  font-size: 50px;
+  font-size: 60px;
   color: #f4b510;
   margin: 0;
+  padding-top: 40px;
   letter-spacing: 3px;
   font-weight: 700;
 }
 
 .h10 {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
   text-align: center;
   letter-spacing: 3px;
