--- a/src/web-design/WebDesign.css
+++ b/src/web-design/WebDesign.css
@@ -2,11 +2,11 @@
   height: 100vh;
 }
 
-h4 {
+.h4 {
   text-align: center;
   font-size: 60px;
   color: #f4b510;
-  padding: 30px 0;
+  padding: 70px 0;
   margin: 0;
   padding-bottom: 0;
   letter-spacing: 3px;
@@ -71,6 +71,10 @@ h5 {
     font-size: 30px;
     letter-spacing: 3px;
   }
+  .h4 {
+    color: #f4b510;
+    padding-top: 75px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
@@ -99,11 +103,12 @@ h5 {
     object-fit: contain;
   }
   h5 {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     font-size: 20px;
   }
-  h4 {
-    margin-bottom: 20px;
+  .h4 {
+    color: #f4b510;
+    padding: 55px 0 30px 0;
   }
 }
 
@@ -114,13 +119,15 @@ h5 {
     object-fit: contain;
   }
   h5 {
-    font-size: 20px;
+    font-size: 15px;
     letter-spacing: 3px;
-    margin-bottom: 40px 0 0 0;
+    margin: 40px 0 20px 0;
   }
-  h4 {
+  .h4 {
     padding: 40px 0 0 0;
-    font-size: 25px;
+    font-size: 40px;
+    font-weight: 700;
+    padding-bottom: 20px;
   }
 }
 
@@ -130,7 +137,7 @@ h5 {
     height: 300px;
     object-fit: contain;
   }
-  h4 {
+  .h4 {
     font-size: 40px;
   }
   h5 {
