--- a/src/web-design/WebDesign.css
+++ b/src/web-design/WebDesign.css
@@ -6,10 +6,11 @@
   text-align: center;
   font-size: 60px;
   color: #f4b510;
-  padding: 70px 0;
+  padding: 40px 0;
   margin: 0;
   padding-bottom: 0;
   letter-spacing: 3px;
+  font-weight: 700;
 }
 
 h5 {
