am rezolvat cu router-ul

--- a/src/portofolio-page-two/PortofolioPageTwo.css
+++ b/src/portofolio-page-two/PortofolioPageTwo.css
@@ -28,7 +28,7 @@
   margin: 0 20px;
 }
 
-.lucky {
+.lucky-dice {
   width: 460px;
   object-fit: contain;
   border-radius: 5px;
@@ -69,7 +69,7 @@
 }
 
 @media screen and (max-width: 2000px) {
-  .lucky {
+  .lucky-dice {
     width: 450px;
   }
 
@@ -79,7 +79,7 @@
 }
 
 @media screen and (max-width: 1400px) {
-  .lucky {
+  .lucky-dice {
     width: 420px;
   }
 
@@ -103,7 +103,7 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .lucky {
+  .lucky-dice {
     width: 390px;
   }
 
@@ -126,7 +126,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .lucky {
+  .lucky-dice {
     width: 280px;
   }
 
@@ -156,7 +156,7 @@
 }
 
 @media screen and (max-width: 700px) {
-  .lucky {
+  .lucky-dice {
     width: 200px;
   }
 
