--- a/src/portofolio-page-one/PortofolioPageOne.css
+++ b/src/portofolio-page-one/PortofolioPageOne.css
@@ -45,9 +45,9 @@
   font-size: 60px;
   color: #f4b510;
   margin: 0;
-  padding-top: 40px;
   letter-spacing: 3px;
   font-weight: 700;
+  padding-top: 70px;
 }
 
 .h10 {
@@ -198,5 +198,8 @@ button {
   .sixth-button {
     height: 25px;
     width: 110px;
+  }
+  .header-sixth {
+    padding-top: 50px;
   }
 }
