--- a/src/services-page/Services.css
+++ b/src/services-page/Services.css
@@ -24,7 +24,7 @@ h6 {
   text-align: center;
   font-size: 70px;
   color: #f4b510;
-  padding: 50px 0;
+  padding: 70px 0 30px 0;
   margin: 0;
   letter-spacing: 3px;
 }
@@ -188,7 +188,7 @@ h6 {
 
   .h7 {
     font-size: 20px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
   }
 
   h6 {
