--- a/src/services-page/Services.css
+++ b/src/services-page/Services.css
@@ -7,7 +7,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 65%;
 }
 
 .first2-fourtpage {
@@ -24,7 +23,7 @@ h6 {
   text-align: center;
   font-size: 70px;
   color: #f4b510;
-  padding: 70px 0 30px 0;
+  padding: 70px 0 10px 0;
   margin: 0;
   letter-spacing: 3px;
 }
@@ -89,19 +88,20 @@ h6 {
 @media screen and (max-width: 1300px) {
   .oldnew-image {
     width: auto;
-    height: 355px;
+    height: 335px;
     object-fit: contain;
     margin-bottom: 15px;
   }
 
   .desktop-image {
     width: auto;
-    height: 340px;
+    height: 320px;
     object-fit: contain;
   }
 
   .h7 {
     font-size: 40px;
+    margin-bottom: 10px;
   }
   .desktop-image {
     margin-bottom: 20px;
@@ -139,7 +139,7 @@ h6 {
     justify-content: space-evenly;
   }
   .oldnew-image {
-    width: 230px;
+    width: 240px;
     height: 230px;
     object-fit: contain;
   }
@@ -156,7 +156,7 @@ h6 {
 
   h6 {
     font-size: 40px;
-    padding: 20px 0;
+    padding: 70px 0;
   }
   .first2-fourtpage {
     justify-content: center;
@@ -188,11 +188,11 @@ h6 {
 
   .h7 {
     font-size: 20px;
-    margin-bottom: 10px;
   }
 
   h6 {
     font-size: 30px;
-    margin-bottom: 50px;
+    padding-bottom: 20px;
+    padding-top: 50px;
   }
 }
