--- a/src/contact-page/ContactPage.css
+++ b/src/contact-page/ContactPage.css
@@ -211,7 +211,7 @@
   }
   .header-eighth {
     font-size: 25px;
-    padding: 50px 0;
+    padding: 50px 0 20px 0;
   }
   .page-height-special {
     height: 160vh;
