--- a/src/skills-page/SkillsPage.css
+++ b/src/skills-page/SkillsPage.css
@@ -197,6 +197,12 @@ h4 {
 
   h4 {
     font-size: 30px;
-    padding: 60px 0 40px 10px;
+    padding: 70px 0 40px 10px;
+  }
+  .third-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 64vh;
   }
 }
