--- a/src/portofolio-page-two/PortofolioPageTwo.css
+++ b/src/portofolio-page-two/PortofolioPageTwo.css
@@ -29,13 +29,13 @@
 }
 
 .lucky-dice {
-  width: 460px;
+  width: 600px;
   object-fit: contain;
   border-radius: 5px;
 }
 
 .robo {
-  width: 460px;
+  width: 600px;
   object-fit: contain;
   border-radius: 5px;
 }
@@ -59,21 +59,21 @@
 
 @media screen and (max-width: 2000px) {
   .lucky-dice {
-    width: 435px;
+    width: 500px;
   }
 
   .robo {
-    width: 435px;
+    width: 500px;
   }
 }
 
 @media screen and (max-width: 1400px) {
   .lucky-dice {
-    width: 420px;
+    width: 380px;
   }
 
   .robo {
-    width: 420px;
+    width: 380px;
   }
 
   .header-sixth {
@@ -176,6 +176,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 72vh;
   }
   .test2 {
     margin-top: 10px;
