--- a/src/footer-page/Footer.css
+++ b/src/footer-page/Footer.css
@@ -138,6 +138,6 @@
     justify-content: center;
     height: 85vh;
     padding: 20px 0;
-    background-image: url("../background.png");
+    background-image: url("../assets/background.png");
   }
 }
