am terminat de modificat structura, ura !

--- a/src/pages/portofolio/Portofolio.css
+++ b/src/pages/portofolio/Portofolio.css
@@ -1,3 +1,7 @@
+.page-height-two {
+  height: 200vh;
+}
+
 .page-height {
   height: 100vh;
 }
@@ -14,6 +18,15 @@
   border-radius: 5px;
 }
 
+.sixth-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  height: 80%;
+}
+
 .header-sixth {
   text-align: center;
   font-size: 60px;
@@ -24,13 +37,50 @@
   padding-top: 70px;
 }
 
+.first2-sixth {
+  display: flex;
+}
+
+.second2-sixth {
+  display: flex;
+}
+
+.test2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0 20px;
+}
+
+.lucky-dice {
+  width: 600px;
+  object-fit: contain;
+  border-radius: 5px;
+}
+
+.robo {
+  width: 600px;
+  object-fit: contain;
+  border-radius: 5px;
+}
+
 .h10 {
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 700;
   text-align: center;
   letter-spacing: 3px;
   margin-bottom: 10px;
+}
+
+.sixth-button {
+  margin-top: 10px;
+  height: 50px;
+  width: 130px;
+  border-radius: 10px;
+  background-color: #f4b510;
 }
 
 button {
@@ -45,14 +95,21 @@ button {
   .todo {
     width: 500px;
   }
+  .lucky-dice {
+    width: 500px;
+  }
+
+  .robo {
+    width: 500px;
+  }
 }
 
 @media screen and (max-width: 1400px) {
-  .product {
+  .lucky-dice {
     width: 380px;
   }
 
-  .todo {
+  .robo {
     width: 380px;
   }
 
@@ -68,6 +125,13 @@ button {
   .sixth-button {
     height: 40px;
     width: 130px;
+  }
+  .product {
+    width: 380px;
+  }
+
+  .todo {
+    width: 380px;
   }
 }
 
@@ -91,6 +155,13 @@ button {
   .sixth-button {
     height: 35px;
     width: 130px;
+  }
+  .lucky-dice {
+    width: 390px;
+  }
+
+  .robo {
+    width: 390px;
   }
 }
 
@@ -122,9 +193,27 @@ button {
     justify-content: center;
     margin: 0 0;
   }
+  .lucky-dice {
+    width: 280px;
+  }
+
+  .robo {
+    width: 280px;
+  }
+
+  .header-sixth {
+    font-size: 40px;
+  }
 }
 
 @media screen and (max-width: 700px) {
+  .lucky-dice {
+    width: 170px;
+  }
+
+  .robo {
+    width: 170px;
+  }
   .product {
     width: 170px;
   }
@@ -152,6 +241,7 @@ button {
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+    height: 72vh;
   }
   .sixth-container {
     display: flex;
@@ -165,5 +255,12 @@ button {
   }
   .header-sixth {
     padding-top: 60px;
+  }
+  .sixth-button {
+    height: 30px;
+    width: 110px;
+  }
+  .test2 {
+    margin-top: 10px;
   }
 }
