--- a/src/pages/steps-page/StepsPage.css
+++ b/src/pages/steps-page/StepsPage.css
@@ -88,6 +88,10 @@
   .fifth-container {
     height: 65%;
   }
+  .header-fifth {
+    font-size: 45px;
+    padding-top: 70px;
+  }
 }
 
 @media screen and (max-width: 2000px) {
