--- a/src/pages/clients-testimonials/ClientsTestimonials.css
+++ b/src/pages/clients-testimonials/ClientsTestimonials.css
@@ -7,16 +7,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  height: 55vh;
+  height: 75vh;
 }
 
 .header-eighth {
   text-align: center;
-  font-size: 50px;
+  font-size: 60px;
   color: #f4b510;
   margin: 0;
   letter-spacing: 3px;
-  padding: 70px 0 0 0;
+  padding: 120px 0 0 0;
   font-weight: 700;
 }
 
@@ -45,25 +45,25 @@
 
 @media screen and (max-width: 2000px) {
   .passion {
-    width: 350px;
+    width: 500px;
     object-fit: contain;
     border-radius: 5px;
   }
 
   .needs {
-    width: 350px;
+    width: 500px;
     object-fit: contain;
     border-radius: 5px;
   }
 
   .quickly {
-    width: 350px;
+    width: 500px;
     object-fit: contain;
     border-radius: 5px;
   }
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1600px) {
   .passion {
     width: 300px;
     object-fit: contain;
@@ -106,52 +106,6 @@
   }
 }
 
-@media screen and (max-width: 1100px) {
-  .passion {
-    width: 270px;
-    object-fit: contain;
-    border-radius: 5px;
-  }
-
-  .needs {
-    width: 270px;
-    object-fit: contain;
-    border-radius: 5px;
-  }
-
-  .quickly {
-    width: 270px;
-    object-fit: contain;
-    border-radius: 5px;
-  }
-  .header-eighth {
-    font-size: 35px;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .passion {
-    width: 250px;
-    object-fit: contain;
-    border-radius: 5px;
-  }
-
-  .needs {
-    width: 250px;
-    object-fit: contain;
-    border-radius: 5px;
-  }
-
-  .quickly {
-    width: 250px;
-    object-fit: contain;
-    border-radius: 5px;
-  }
-  .header-eighth {
-    font-size: 35px;
-  }
-}
-
 @media screen and (max-width: 900px) {
   .eighth-container {
     display: flex;
@@ -182,9 +136,10 @@
   }
   .header-eighth {
     font-size: 25px;
+    padding-bottom: 30px;
   }
   .page-height-special {
-    height: 160vh;
+    height: 120vh;
   }
 }
 
@@ -214,6 +169,6 @@
     padding: 70px 0 20px 0;
   }
   .page-height-special {
-    height: 160vh;
+    height: 100vh;
   }
 }
