--- a/src/pages/footer-page/Footer.css
+++ b/src/pages/footer-page/Footer.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 22vh;
+  height: 25vh;
 }
 
 .footer {
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: space-around;
   border-radius: 20px;
+  margin-bottom: 30px;
 }
 
 .footer-column {
@@ -35,7 +36,7 @@
 .footer-second-column {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .footer-second-column > p {
@@ -113,7 +114,6 @@
     flex-direction: row;
     justify-content: center;
     height: 40vh;
-    margin-top: 20px;
   }
   .footer-first2,
   .footer-second2 {
@@ -139,6 +139,6 @@
     justify-content: center;
     height: 85vh;
     padding: 20px 0;
-    background-image: url("../../assets/darkbackground.png");
+    background-color: #151b54;
   }
 }
