--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,12 +1,46 @@
 .container-contact {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   height: 100vh;
 }
 
 .container-contact > p {
   font-size: 20px;
   font-weight: 700;
+}
+
+.contact-p {
+  text-align: center;
+}
+
+.container-contact > input[type="text"],
+select {
+  width: 30%;
+  padding: 18px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.container-contact > input[type="submit"] {
+  width: 30%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.container-contact > input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.container-contact > label {
+  text-align: flex-start;
 }
