--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -6,6 +6,12 @@
   height: 100vh;
 }
 
+.container-contact > form {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+}
+
 .container-contact > p {
   font-size: 20px;
   font-weight: 700;
