--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -19,6 +19,7 @@
 
 .contact-p {
   text-align: center;
+  border-radius: 10px;
 }
 
 .container-contact > input[type="text"],
@@ -52,7 +53,9 @@ select {
 }
 
 .contact-message {
+  width: 30%;
   height: 120px;
+  font-size: 17px;
 }
 
 label {
@@ -80,6 +83,9 @@ label {
     width: 40%;
     text-align: left;
   }
+  .contact-message {
+    width: 40%;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -95,5 +101,19 @@ label {
     display: inline-block;
     width: 55%;
     text-align: left;
+  }
+  .contact-message {
+    width: 55%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container-contact span {
+    font-size: 12.5px;
+    font-weight: 600;
+  }
+  .contact-message {
+    width: 55%;
+    font-size: 12px;
   }
 }
