--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -12,14 +12,10 @@
   width: 30%;
 }
 
-.container-contact > p {
-  font-size: 20px;
-  font-weight: 700;
-}
-
 .contact-p {
   text-align: center;
   border-radius: 10px;
+  font-weight: 700;
 }
 
 .container-contact > input[type="text"],
@@ -64,20 +60,24 @@ label {
   text-align: left;
 }
 
+.header-contact {
+  font-size: 40px;
+  margin: 30px 0;
+  font-weight: 700;
+}
+
 @media screen and (max-width: 1400px) {
   .container-contact > input[type="text"],
   select {
-    padding: 12px 14px;
+    padding: 10px 12px;
     width: 40%;
   }
 
   .container-contact > input[type="submit"] {
     width: 40%;
-    padding: 12px 16px;
+    padding: 10px 14px;
   }
-  .container-contact > p {
-    font-size: 15px;
-  }
+
   label {
     display: inline-block;
     width: 40%;
@@ -85,6 +85,13 @@ label {
   }
   .contact-message {
     width: 40%;
+  }
+  .header-contact {
+    font-size: 30px;
+    margin: 30px 0 10px 0;
+  }
+  .contact-message {
+    height: 60px;
   }
 }
 
@@ -105,6 +112,10 @@ label {
   .contact-message {
     width: 55%;
   }
+  .header-contact {
+    font-size: 22px;
+    margin: 30px 0 10px 0;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -115,5 +126,9 @@ label {
   .contact-message {
     width: 55%;
     font-size: 12px;
+  }
+  .header-contact {
+    font-size: 18px;
+    margin: 30px 0 10px 0;
   }
 }
